# vcdanalyzer

./: Cargo.toml
src/: generator.rs  main.rs  vcdwrapper.rs
